--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -4,7 +4,7 @@ dataSource.username=ywang
 dataSource.password=ouafahwafa79
 
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
