--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -1,6 +1,6 @@
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://localhost:3306/FinData?useSSL=false&amp;serverTimezone=UTC
-dataSource.username=ywang
+dataSource.username=root
 dataSource.password=ouafahwafa79
 
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
