--- a/src/main/resources/persistence-mysql.properties
+++ b/src/main/resources/persistence-mysql.properties
@@ -1,7 +1,7 @@
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://localhost:3306/FinData?useSSL=false&amp;serverTimezone=UTC
-dataSource.username=yanweb2
-dataSource.password=N9@&xvxgFSpfRAt3
+dataSource.username=ywang
+dataSource.password=ouafahwafa79
 
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=create
