--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,28 @@
             <version>v4-rev612-1.25.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.ta4j/ta4j-core -->
+        <dependency>
+            <groupId>org.ta4j</groupId>
+            <artifactId>ta4j-core</artifactId>
+            <version>0.14</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.ta4j/ta4j-parent -->
+        <dependency>
+            <groupId>org.ta4j</groupId>
+            <artifactId>ta4j-parent</artifactId>
+            <version>0.14</version>
+            <type>pom</type>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.ta4j/ta4j-examples -->
+        <dependency>
+            <groupId>org.ta4j</groupId>
+            <artifactId>ta4j-examples</artifactId>
+            <version>0.14</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
