--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example</groupId>
-	<artifactId>scheduler-demo</artifactId>
+	<groupId>com.yan.wang</groupId>
+	<artifactId>scheduler</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>scheduler-demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>scheduler-yan</name>
+	<description>Scheduler project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
